# hello_django

./: .dockerignore  .env.dev  .env.development  .env.prod  .env.production  .env.staging  HOWTOs.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  poetry_export.sh  pyenv_poetry_linker.md  pyproject.toml
app/: Dockerfile  Dockerfile.prod  entrypoint.prod.sh  entrypoint.sh  manage.py  requirements.txt  requirements.txt.dev
app/core/: asgi.py  gunicorn.conf.py  urls.py  wsgi.py
app/core/settings/: __init__.py  base.py  development.py  production.py  staging.py
app/dashboard/: views.py
app/hello_django/: settings.py
