[project]
name = "hello-django"
version = "0.1.0"
description = "Dockerizing Django with Postgres, Gunicorn and Nginx"
authors = [
    {name = "Jansen Simanullang",email = "jansen.simanullang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"


[tool.poetry.group.production.dependencies]
psycopg = {extras = ["binary"], version = "^3.2.9"}
gunicorn = "^23.0.0"
gevent = "^25.5.1"

